--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="card">
     <h2 class="card-title">Paseudoclases</h2>
-    <p class="card-text">Hola ADSO</p>
+    <p class="card-text"> lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, tenetur!</p>
     <ul>
       <li>Box model</li>
       <li>Pseudoelementos</li>
