--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="card">
-    <h2 class="card-title">Paseudoclases</h2>
+    <h2 class="card-title">Pseudoclases</h2>
     <p class="card-text"> lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, tenetur!</p>
     <ul>
       <li>Box model</li>
